--- a/Portfolio/Podfile
+++ b/Portfolio/Podfile
@@ -10,6 +10,7 @@ target 'Portfolio' do
   pod 'Firebase/Auth'
   pod 'Firebase/Database'
   pod 'Firebase/Messaging'
+  pod 'Firebase/Storage'
 
   # Pods for Portfolio
 
