Integrating groupctest into main project

--- a/Portfolio/Podfile
+++ b/Portfolio/Podfile
@@ -8,7 +8,7 @@ target 'Portfolio' do
   
   pod 'Firebase'
   pod 'Firebase/Auth'
-  pod 'Firebase/Database'
+  pod 'Firebase/Firestore'
   pod 'Firebase/Messaging'
   pod 'Firebase/Storage'
 
